# KurusView

./: .gitignore  .gitmodules  .travis.yml  .txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  TEAM.md  YusufTizani.txt  generateDocumentationAndDeploy.sh  index.html
Icons/: icons.qrc  kurusview.rc
Resources/: resources.qrc
html/: GMockFaq.html  GMockForDummies.html  _k_model_renderer_8h_source.html  _k_view_8h_source.html  _m_cell_8h.html  _m_cell_8h_source.html  _m_hexahedron_8h.html  _m_hexahedron_8h_source.html  _m_material_8h_source.html  _m_matrix_8h.html  _m_matrix_8h.js  _m_matrix_8h_source.html  _m_model_8h_source.html  _m_pyramid_8h.html  _m_pyramid_8h_source.html  _m_tetrahedron_8h.html  _m_tetrahedron_8h_source.html  _m_vector_8h.html  _m_vector_8h.js  _m_vector_8h_source.html  _material_8h_source.html  _matrix_8h.html  _matrix_8h.js  _matrix_8h_source.html  _model_8h_source.html  _model_renderer_8h_source.html  _view_8h_source.html  annotated.html  annotated_dup.js  class_ad_hoc_test_result_test-members.html  class_ad_hoc_test_result_test.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_comment_test.html  class_common_test-members.html  class_common_test.html  (+1020 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+45 more)
include/: Cell.h  MCell.h  MMaterial.h  MMatrix.h  MModel.h  MVector.h  Material.h  Matrix.h  Model.h  ModelRenderer.h  Vector.h
include/Cells/: MHexahedron.h  MPyramid.h  MTetrahedron.h
include/ModelRenderer/: Display.h  KModelRenderer.h  KView.h  Mesh.h  ModelRenderer.h  Mouse.h  Shader.h  View.h  dialog.h  mainwindow.h  modelwindow.h  settingsdialog.h  welcomewindow.h
include/Utils/: clickableQLabel.h  dark_mode_detect.h
lib/: CMakeLists.txt  Display.cpp  KurusViewLib.cmake  MCell.cpp  MMaterial.cpp  MMatrix.cpp  MModel.cpp  MVector.cpp  Material.cpp  Matrix.cpp  Model.cpp  ModelRenderer.cpp
lib/Cells/: MHexahedron.cpp  MPyramid.cpp  MTetrahedron.cpp
lib/ModelRenderer/: Display.cpp  KModelRenderer.cpp  KView.cpp  Mesh.cpp  ModelRenderer.cpp  Mouse.cpp  Shader.cpp  View.cpp  dialog.cpp  dialog.ui  mainwindow.cpp  mainwindow.ui  modelwindow.cpp  modelwindow.ui  settingsdialog.cpp  settingsdialog.ui  welcomewindow.cpp  welcomewindow.ui
lib/Utils/: clickableQLabel.cpp  dark_mode_detect.cpp
models/: ExampleModel1.mod  ExampleModel2.mod  ExampleModel3.mod  bawar_plane.stl  he111.stl  hexahedron.txt  pyramid.txt  pyramidAndTetrahedron.txt  sphere.stl  testmodel.txt  testmodel2.txt  testmodel3.txt  tetrahedron.txt
packaging/: CMakeLists.txt  DeployQt5.cmake
res/: basicShader.frag  basicShader.vert
src/: CMakeLists.txt  KurusView.cmake  main.cpp
tests/: CMakeLists.txt  MCellTest.cpp  MHexahedronTest.cpp  MMatrixTest.cpp  MModelTest.cpp  MPyramidTest.cpp  MTetrahedronTest.cpp  MVectorTest.cpp  MatrixTest.cpp  ModelTest.cpp
